<resources>
    <string name="app_name">Where are my things</string>
    <string name="app_label"> Search</string>
    <string name="search_hint">Search</string>
    <string name="search_view">Enter search</string>
    <string name="take_photo">TAKE PHOTO</string>
    <string name="quantity">Quantity: </string>
    <string name="EDIT">EDIT</string>
    <string name="DELETE">DELETE</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="add_here_category">Add here a new category</string>
    <string name="add_here_item">Add here a new item</string>

    <string name="add_category">Add new category</string>
    <string name="add_category_message">Type a name and take a photo for your new category</string>
    <string name="edit_category">Edit category</string>
    <string name="edit_category_message">Change the name or take a photo of the Category</string>

    <string name="category_create_name_required">The name is required to create a new category</string>
    <string name="category_edit_name_required">The name is required to edit the current category</string>

    <string name="add_item">Add new item</string>
    <string name="add_item_message">"Add an item for "</string>
    <string name="edit_item">Edit item</string>
    <string name="edit_item_message">Change the inputs of the item</string>

    <string name="item_create_name_required">The inputs are required to create a new item</string>
    <string name="item_edit_name_required">The inputs are required to edit the current item</string>

    <string name="category_name_hint">Category name</string>
    <string name="item_name_hint">Item name</string>
    <string name="item_description_hint">Item description</string>
    <string name="item_place_hint">Place</string>

    <string name="add">Add</string>
    <string name="save">Save</string>

    <string name="category_photo_or">Or copy an image link here</string>

</resources>
