<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextNewCategoryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/category_name_hint"
        android:inputType="textCapSentences" />

    <Button
        android:id="@+id/btnNewCategoryTakePhoto"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/transparent"
        android:text="@string/take_photo"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/editTextPhotoWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/category_photo_or"/>

</LinearLayout>